samples/_failures_safe/1761522744_b20a54_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2a775645.c: In function ‘tokenize_line’:
./samples/SAFE/__tmp_2a775645.c:152:72: error: expected ‘)’ at end of input
  152 |         else if (parse_punctuation(line, &pos, &token, line_num, column
      |                                   ~                                    ^
      |                                                                        )
./samples/SAFE/__tmp_2a775645.c:152:9: error: expected declaration or statement at end of input
  152 |         else if (parse_punctuation(line, &pos, &token, line_num, column
      |         ^~~~
./samples/SAFE/__tmp_2a775645.c:152:9: error: expected declaration or statement at end of input
